...
  <string name="tink_accounts_type_loan">Loan</string>
  <string name="tink_accounts_type_mortgage">Mortgage</string>
  <string name="tink_accounts_type_other">Other</string>
  <string name="tink_accounts_type_pension">Pension</string>
  <string name="tink_accounts_type_savings">Savings</string>

  <string name="tink_everyday_account">Everyday accounts</string>
  <string name="tink_savings_account">Savings accounts</string>
  <string name="tink_loans_account">Loan accounts</string>
  <string name="tink_other_account">Other accounts</string>

  <string name="tink_transactions_error">You haven\'t made any transactions yet</string>
  <string name="tink_transaction_similar_title">Similar transactions</string>
  <string name="tink_transaction_similar_description">Do you also want to assign these transactions to the %1$s category?</string>
  <string name="tink_transaction_similar_button_skip_text">Skip</string>
  <string name="tink_transaction_similar_button_accept_text">Assign %1$d selected</string>
...
