...
  <FrameLayout
      android:id="@+id/accountsNotGroupedRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/allAccountsList"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="gone" />
...
  <FrameLayout
      android:id="@+id/accountsGroupedRoot"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/groupedAccountsList"
      android:padding="24dp"
      android:clipToPadding="false"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:visibility="gone" />
...
